--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
+    "react-icons": "^4.10.1",
     "yup": "^1.2.0"
   },
   "devDependencies": {
